alteração no footer

--- a/exercicios/desafios/d010/android.html
+++ b/exercicios/desafios/d010/android.html
@@ -111,7 +111,7 @@
         </article>        
     </main>
         <footer>
-            <p>Site Criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a></p>
+            <p>Site Criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Fábio Ferro e Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a></p>
         </footer>
     
 </body>
