--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -7,20 +7,40 @@
     <title>Posição dos Fundos</title>
     <style>
         div.bloco {
-            height: 100px;
+            background-image: url(imagens/wallpaper002.jpg);
+            height: 200px;
             border: 1px solid black;
+            border-radius: 20px;
+            margin: 10px;
+           
+        }
+        div#q1 {
+            background-position: left top;
+        }
+        div#q2 {
+            background-position: left center;
+        }
+        div#q3 {
+            background-position: right bottom;
+        }
+        div#q4 {
+            background-position: center center;
         }
     </style>
 </head>
 <body>
-    <div class="bloco">
+    <div class="bloco" id="q1">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q2">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q3">
 
     </div>
+    <div class="bloco" id="q4">
+
+    </div>
+    
 </body>
 </html>
