--- a/exercicios/desafios/d012/index.html
+++ b/exercicios/desafios/d012/index.html
@@ -10,7 +10,9 @@
     <body>
         <header>
             <h1>Cordel Moderno</h1>
-            <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+            <p>
+                Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+            </p>
             
     <section class="normal">
         <p>
