--- a/exercicios/desafios/d012/index.html
+++ b/exercicios/desafios/d012/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-        <p>Site criado por G.<a href="https://gustavoguanabara.github.io" target="_blank">Guanabara</a> com aluno <a href="https://www.youtube.com/c/CANALFERROSTEAM" target="_blank">Fábio Ferro</a></p>
+        <p>Site criado por G.<a href="https://gustavoguanabara.github.io" target="_blank">Guanabara</a> e <a href="https://www.youtube.com/c/CANALFERROSTEAM" target="_blank">Fábio Ferro</a></p>
     </footer>
 </body>
 </html>
