--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -22,11 +22,27 @@
             border: 1px solid black;
             padding: 8px;
         }
+        .destaque {
+            background-color: greenyellow;
+        }
+        col.cnome {
+            background-color: chartreuse;
+        }
+        col.sexo {
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
     <h1>Exercicio de Tabelas</h1>
     <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="csexo">
+            <col class="cidade">
+            <col class="cprof">
+
+        </colgroup>
         <caption>Cadastro</caption>
         <tr>
             <th scope="col">Nome</th>
