--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="on"
+    <form action="cadastro.php" method="post" autocomplete="on">
+        
+    </form>
         <p>
             <label for="iusu">Usuário: </label>
             <input type="text" name="usu" id="iusu" required minlength="5" maxlength="10" size="10" placeholder="Usuario" autocomplete="username">
