--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="estilos/style.css">
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 48
+        }
+        </style>
+        
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 01</a></li>
                 <li><a href="#">Opção 02</a></li>
@@ -34,5 +49,15 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque suscipit sit consequuntur nam optio voluptas ab, nemo sapiente ullam ipsum laboriosam tempore magnam quidem possimus vero rerum ratione autem iure?</p>
         </article>
     </main>
+        <script>
+            function clickMenu() {
+                if (itens.style.display == "block") {
+                    itens.style.display = "none"
+                } 
+                else {
+                    itens.style.display = "block"
+                }
+            }
+        </script>
 </body>
 </html>
