--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Site</h1>
+        <h1>Fábio Ferro - Ferros Team Tv</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
             menu
             </span>
